fix contact form spacing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -150,7 +150,7 @@ h1, h2, h3, h4, h5, span {
   line-height: 1.5;
 }
 
-p, small {
+p, a, small {
   line-height: 1.9;
 }
 
@@ -296,7 +296,7 @@ section {
   width: calc(100%);
   background-repeat: no-repeat;
   background-size: 0% 100%;
-  background-position: bottom 1px left 0px;
+  background-position: bottom 0px left 0px;
   background-position-x: 0%;
   background-position-y: 0%;
   transition: background-size 1s;
